# brushmc

./: .gitignore  README.md  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml
src/: index.html  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
