[package]
name = "brush-mc"
version = "1.0.0"
edition = "2021"

[lib]
name = "brush_mc_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
tauri-plugin-dialog = "2.7.1"
zip = "0.6"
